--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chai-match": "^1.1.1",
     "express": "4.17.1",
+    "express-list-endpoints": "^5.0.0",
     "mochawesome": "6.1.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
